package LABORATORIO_POO.CLASE_05.Ejercicio_parte05;

public class LimiteSobregiroExcedidoException extends Exception {
    public LimiteSobregiroExcedidoException(String mensaje) {
        super(mensaje);
    }
}

