package LABORATORIO_POO.CLASE_05.Ejercicio_parte05;

public class SaldoInsuficienteException extends Exception {
    public SaldoInsuficienteException(String mensaje) {
        super(mensaje);
    }
}
